# GeminiCallCpp

./: .gitignore  README.md
GeminiCallCpp/: CMakeLists.txt  CMakePresets.json  vcpkg.json
GeminiCallCpp/src/: helper.cpp  helper.h  main.cpp
